Fix file change list overflow

--- a/src/app/views/repository/file.component.scss
+++ b/src/app/views/repository/file.component.scss
@@ -3,6 +3,7 @@
 .file-panel {
   width: 100%;
   height: 100%;
+  flex: 1 1 auto;
 
   display: flex;
   flex-direction: column;
@@ -20,63 +21,65 @@
     margin-right: auto;
   }
 
-  .files-changed {
+  .header {
     flex: 1 1 auto;
+    text-align: center;
+    min-height: 35px;
 
-    .header {
-      flex: 1 1 auto;
-      text-align: center;
+    margin: 0;
 
-      margin: 0;
+    background-color: var(--surface);
 
-      background-color: var(--surface);
+    border-width: 1px 0 1px 0;
+    border-style: solid;
+    border-color: var(--surface-surround);
 
-      border-width: 1px 0 1px 0;
-      border-style: solid;
-      border-color: var(--surface-surround);
+    font-size: 1.5em;
+    font-weight: bold;
+  }
 
-      font-size: 1.5em;
-      font-weight: bold;
+  .empty-message {
+    padding: 20px;
+    text-align: center;
+  }
+
+  .file-list {
+    overflow-y: scroll;
+    flex-grow: inherit;
+  }
+
+  .file {
+    width: 100% - 1;
+    height: 10%;
+    position: relative;
+    overflow: hidden;
+    border: 1px solid var(--surface-surround);
+
+    &:hover {
+      opacity: 0.8;
     }
 
-    .empty-message {
-      padding: 20px;
+    p {
+      display: inline-block;
 
-      text-align: center;
-    }
+      width: 80%;
+      margin-left: 10px;
 
-    .file {
-      width: 100% - 1;
-      height: 10%;
-      position: relative;
+      color: var(--on-background);
+
+      white-space: nowrap;
+
+      vertical-align: middle;
+      text-overflow: ellipsis;
+
       overflow: hidden;
-      border: 1px solid var(--surface-surround);
+    }
 
-      &:hover {
-        opacity: 0.8;
-      }
-
-      p {
-        display: inline-block;
-
-        width: 80%;
-        margin-left: 10px;
-
-        color: var(--on-background);
-
-        white-space: nowrap;
-
-        vertical-align: middle;
-        text-overflow: ellipsis;
-
-        overflow: hidden;
-      }
-
-      input {
-        vertical-align: middle;
-      }
+    input {
+      vertical-align: middle;
     }
   }
+
 
   .commit-panel {
     flex: initial;
